objects/LLC_BI__Deposit__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Period_Number__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the number of periods that the initial rate is in effect.</description>
        <inlineHelpText>The number of periods that the initial rate will be in effect.</inlineHelpText>
        <label>Initial Rate Period Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Period_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the period of time the initial rate applies.</description>
        <inlineHelpText>Specifies the period of time the initial rate will apply.</inlineHelpText>
        <label>Initial Rate Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Payment_Method_Type__c</fullName>
        <description>This picklist field is populated during the deposit account opening process. The picklist values are the methods of payment (to the account owner) of the earned interest or dividends on an interest bearing or dividend earning certificate account. The frequency of payment is separately indicated. When applicable, the account number to be credited and the ABA number of the receiving financial institution is required.</description>
        <label>Interest Payment Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add to Principal</fullName>
                </value>
                <value>
                    <fullName>Receive Periodic Check</fullName>
                </value>
                <value>
                    <fullName>Credit Account</fullName>
                </value>
                <value>
                    <fullName>Credit Account at other financial institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, a margin is used in determining the interest rate for a variable rate account.</description>
        <inlineHelpText>If true a margin is used in determining the interest rate for a variable rate account.</inlineHelpText>
        <label>Interest Rate Margin Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Percent__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This percentage is added to the index to determine the applicable rate for the account.</description>
        <inlineHelpText>This percentage that is added to the index to determine the applicable rate for the account.</inlineHelpText>
        <label>Interest Rate Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the type of interest rate on the account.</description>
        <inlineHelpText>Specifies the type of interest rate on the account.</inlineHelpText>
        <label>Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the interest rate of the deposit account. If an initial rate (for example, a teaser) applies, then this is the rate that is in effect after the expiration of the teaser period.</description>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Withdrawal_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, accrued earnings are required to be distributed out of the account.</description>
        <inlineHelpText>If true accrued earnings are required to be distributed out of the account.</inlineHelpText>
        <label>Interest Withdrawal Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system selects this checkbox to indicate that the Deposit is booked. By default, this checkbox is deselected.</description>
        <inlineHelpText>When selected, this checkbox indicates that the Deposit is booked.</inlineHelpText>
        <label>Is Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Superseded_By__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This field identifies the CD that supersedes this CD.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Status__c, &quot;Superseded&quot;),  LLC_BI__Related_Deposit__r.Name , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Superseded By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Under_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this checkbox to indicate if a current deposit record undergoes maintenance.</description>
        <inlineHelpText>Select this checkbox to indicate that a current deposit is under maintenance.</inlineHelpText>
        <label>Is Under Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lease_Type_Other__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It describes the other type of safe deposit box lease.</description>
        <inlineHelpText>Describes the other type of safe deposit box lease.</inlineHelpText>
        <label>Lease Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Expectancy_Factor__c</fullName>
        <description>This field is optional.  It can be collected as part of a workflow. It is the life expectancy factor as reflected in the appropriate IRS table.</description>
        <inlineHelpText>The life expectancy factor as reflected in the appropriate IRS table.</inlineHelpText>
        <label>Life Expectancy Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mailing_Address__c</fullName>
        <description>Street address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</description>
        <inlineHelpText>Street address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</inlineHelpText>
        <label>Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mailing_City__c</fullName>
        <description>City for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</description>
        <inlineHelpText>City for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mailing_State__c</fullName>
        <description>State for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</description>
        <inlineHelpText>State for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Mailing_Zip_Code__c</fullName>
        <description>Zip Code for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</description>
        <inlineHelpText>Zip Code for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maturity_Date__c</fullName>
        <description>TThis field is optional and can be collected as part of a workflow. This date field is used to specify the date at which the deposit matures.</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Balance_Tiered_Account__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It represents the amount of the maximum tier balance that may be in the account in order to earn the disclosed rate for that tier. This is the high-end dollar amount for a given tier.</description>
        <inlineHelpText>The amount of the maximum tier balance that may be in the account in order to earn the disclosed rate for that tier. This is the high end dollar amount for a given tier.</inlineHelpText>
        <label>Maximum Balance Tiered Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Rate_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, a rate ceiling applies on the account.</description>
        <inlineHelpText>If true a rate ceiling applies on the account.</inlineHelpText>
        <label>Maximum Rate Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the highest interest rate that can apply to the account.</description>
        <inlineHelpText>The highest interest rate that can apply to the account.</inlineHelpText>
        <label>Maximum Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Balance_Tiered_Account__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. The amount of the minimum tier balance that must be in the account in order to earn the disclosed rate for that tier. This is the low-end dollar amount for a given tier.</description>
        <inlineHelpText>The amount of the minimum tier balance that must be in the account in order to earn the disclosed rate for that tier. This is the low end dollar amount for a given tier.</inlineHelpText>
        <label>Minimum Balance Tiered Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Rate_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, a rate floor applies to the account.</description>
        <inlineHelpText>If true a rate floor applies to the account.</inlineHelpText>
        <label>Minimum Rate Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the lowest interest rate that can apply to the account.</description>
        <inlineHelpText>The lowest interest rate that can apply to the account.</inlineHelpText>
        <label>Minimum Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Negotiated_Compounding_Frequency__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings, interest, or dividends.</description>
        <inlineHelpText>Specifies how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings/interest/dividends.  Should only be passed if negotiation has occurred at account opening.</inlineHelpText>
        <label>Negotiated Compounding Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Continuous</fullName>
                </value>
                <value>
                    <fullName>No compounding/Simple</fullName>
                </value>
                <value>
                    <fullName>Semimonthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Notes__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is a free form text field used to add notes or details to the deposit record.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Notice_Account_Maturity_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the alternate maturity of an account, if any. This only applies to notice accounts.</description>
        <inlineHelpText>Specifies the alternate maturity of an account if any. This only applies to notice accounts.</inlineHelpText>
        <label>Notice Account Maturity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Period</fullName>
                </value>
                <value>
                    <fullName>No Alternate Maturity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Agents_Required__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It indicates the number of agents required to be present before any action can be made regarding the safe deposit box account.</description>
        <inlineHelpText>The number of agents required to be present before any action can be made regarding the safe deposit box account.</inlineHelpText>
        <label>Number of Agents Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Lessees_Required__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It indicates the number of lessees (holders) required to be present in order to gain access to the safe deposit box.</description>
        <inlineHelpText>The number of lessees (holders) required to be present in order to gain access to the safe deposit box.</inlineHelpText>
        <label>Number of Lessees Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Required_Signers__c</fullName>
        <description>This field indicates the number of redeemers (signers) that are required to withdrawal, either partial or complete, from an account.</description>
        <label>Number of Required Signers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - One signature line</fullName>
                    <default>true</default>
                    <label>1 - One signature line</label>
                </value>
                <value>
                    <fullName>2 - Two signature lines</fullName>
                </value>
                <value>
                    <fullName>3 - Three signature lines</fullName>
                </value>
                <value>
                    <fullName>4 - Four signature lines</fullName>
                </value>
                <value>
                    <fullName>5 - Five signature lines</fullName>
                </value>
                <value>
                    <fullName>6 - Six signature lines</fullName>
                </value>
                <value>
                    <fullName>7 - Seven signature lines</fullName>
                </value>
                <value>
                    <fullName>8 - Eight signature lines</fullName>
                </value>
                <value>
                    <fullName>9 - Nine signature lines</fullName>
                </value>
                <value>
                    <fullName>10 - Ten signature lines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Open_Date__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This date field is used to specify the date the deposit account was opened.</description>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Originating_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field associates a deposit account to the branch which it was originated in. This field is set during the deposit origination workflow.</description>
        <label>Originating Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Distribution_Payment__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It holds a description of the other payment election type.</description>
        <inlineHelpText>A description of the other payment election type.</inlineHelpText>
        <label>Other Distribution Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Frequency_of_Distributions__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is a description of the other frequency of the periodic distributions.</description>
        <inlineHelpText>A description of the other frequency of the periodic distributions.</inlineHelpText>
        <label>Other Frequency of Distributions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Overdraft_Consent_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, consent to pay overdrafts out of the account is given.</description>
        <inlineHelpText>If true consent to pay overdrafts out of the account is being given.</inlineHelpText>
        <label>Overdraft Consent Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Overdraft_Services__c</fullName>
        <description>This optional picklist field is manually populated during deposit origination and indicates if the applicant would like overdraft services.</description>
        <label>Overdraft Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-In</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Owner_Deceased_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the party passed as the Owner of the IRA is deceased. It is typically used in situations where the IRA owner has died but a formal beneficiary IRA has not been created.</description>
        <inlineHelpText>If true the party passed as the Owner of the IRA is deceased. Typically used in connection with situations where the IRA Owner has died but a formal Beneficiary IRA has not been created.</inlineHelpText>
        <label>Owner Deceased Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Structure_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required during the New Deposit Workflow. It is used to indicate the Ownership Structure Type of this deposit.</description>
        <label>Ownership Structure Type</label>
        <referenceTo>LLC_BI__Ownership_Structure_Type__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Account_Number__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It indicates the account number to be debited for the rental fee of the safe deposit box.</description>
        <inlineHelpText>The account number to be debited for the rental fee of the safe deposit box.</inlineHelpText>
        <label>Payment Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Periodic_Change_Limit_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, there is a limit to the amount that a variable rate can change over successive specified periods.</description>
        <inlineHelpText>If true there is a limit to the amount that a variable rate can change over successive specified periods.</inlineHelpText>
        <label>Periodic Change Limit Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Periods_Between_Rate_Changes__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It indicates the number of periods between periodic rate changes.</description>
        <inlineHelpText>The number of periods between periodic rate changes.</inlineHelpText>
        <label>Periods Between Rate Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Rate_Effective_Date__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the day the regular interest rate takes effect on a variable rate account having a different/special initial or promotional rate (in other words, the date corresponding to the day after the expiration of the initial rate period for the specified account).</description>
        <inlineHelpText>The day on which the regular interest rate takes effect on a variable rate account having a different/special initial or promotional rate (i.e. the date corresponding to the day after expiration of initial rate period for the specified account).</inlineHelpText>
        <label>Permanent Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Plan_Number__c</fullName>
        <description>Plan Number</description>
        <inlineHelpText>The plan number with the institution under which accounts will be opened for funds investment. Not the investment account number. The owner may have multiple plans with the institution when some funds can’t commingle, such as rolled over retirement funds.</inlineHelpText>
        <label>Plan Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prevent_Automatic_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the owner of the account that would otherwise automatically renew has determined at account opening to prevent renewals.</description>
        <inlineHelpText>If true the owner of the account that would otherwise automatically renew has determined at account opening to prevent renewals.</inlineHelpText>
        <label>Prevent Automatic Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <description>This field is requied. It is either automatically set or manually collected as part of the New Deposit Workflow. This field is a picklist that allows the user to specify what product line the deposit is associated with.</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                    <default>true</default>
                    <label>Personal</label>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set during the New Deposit Workflow. It indicates the product package associated with a deposit.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and is collected during the New Deposit Workflow. This field is a lookup to the product, used to specify which product the deposit is associated with.</description>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>This field is required and is collected during the New Deposit Workflow. This field is a picklist that allows the user to specify what product type the deposit is associated with.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
                <value>
                    <fullName>Personal Checking</fullName>
                </value>
                <value>
                    <fullName>Business Savings</fullName>
                </value>
                <value>
                    <fullName>Personal Savings</fullName>
                </value>
                <value>
                    <fullName>Business CD</fullName>
                </value>
                <value>
                    <fullName>Personal CD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>